# pyprote

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci-cd-pipeline.yml  codeql-analysis.yml  publish-to-pypi.yml
pyprote/: __init__.py  __main__.py  cli_argument_defaults.py  pyprote.py
pyprote/templates/: README.md_template  pyproject.toml_template  setup.cfg_template
pyprote/templates/package_name_template/: __main__.py_template
tests/: __init__.py  conftest.py  test_pyprote.py
