[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pyprote"

version = "2022.08.4"

description = "A tool for creating python packages."
authors = [
    "Sebastian Cattes <sebastian.cattes@inwt-statistics.de>",
]
maintainers = [
    "Sebastian Cattes <sebastian.cattes@inwt-statistics.de>",
]
license = "LICENSE"

readme = "README.md"

packages = [
    { include = "pyprote", from = "." }
]

homepage = "https://github.com/Cattes/pypote"
repository = "https://github.com/Cattes/pypote"
documentation = "https://github.com/Cattes/pypote"

keywords = ["template", "package", "python"]

classifiers = [
            'Development Status :: 3 - Alpha',
            'Intended Audience :: Developers',
            "Operating System :: OS Independent",
            'Programming Language :: Python :: 3',
            "Programming Language :: Python :: 3.10",
            'Programming Language :: Python :: 3 :: Only',
            ]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.scripts]
pyprote = "pyprote.__main__:main"

# Requirements
[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"


[tool.poetry.dev-dependencies]
black = "22.6.0"
bumpver = "2022.1118"
wemake-python-styleguide = "0.16.1"
isort = "5.10.1"
mypy = "0.961"
build = "0.8.0"
twine = "4.0.1"
pytest = "7.1.2"

##############################################################################


[tool.bumpver]
current_version = "2022.08.4"
version_pattern = "YYYY.0M.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"pyprote/__init__.py" = [
    '__version__ = "{version}"',
]

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
baseline = ".flakehell_baseline"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | pyprote_output_dir/*
)
'''


[tool.cibuildwheel]
build = "*"  # build for all platforms
skip = ["cp36-*", "pp*"] # skip Python 3.6 and PyPy
test-skip = "" # don't skip any tests

archs = ["auto"]
build-frontend = "pip"
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = ""

before-all = ""
before-build = ""
repair-wheel-command = ""

test-command = "pytest {project}/tests"
before-test = ""
test-requires = ["pytest"]
test-extras = []

container-engine = "docker"

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"
manylinux-pypy_i686-image = "manylinux2014"
manylinux-pypy_aarch64-image = "manylinux2014"

musllinux-x86_64-image = "musllinux_1_1"
musllinux-i686-image = "musllinux_1_1"
musllinux-aarch64-image = "musllinux_1_1"
musllinux-ppc64le-image = "musllinux_1_1"
musllinux-s390x-image = "musllinux_1_1"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-listdeps {wheel}",
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.windows]


